# ComputerGraphics

./: .gitignore  CMakeLists.txt
HomeWork2/: CMakeLists.txt  Enemy.h  Fireball.h  main.cpp
HomeWork2/pictures/: pyramid  sphere
task2/: CMakeLists.txt  FragmentShader.shader  VertexShader.shader  main.cpp
task3/: CMakeLists.txt  VertexShader.shader  main.cpp
task4/: CMakeLists.txt  main.cpp
